# visual-recog

./: .gitignore  package-lock.json  pyproject.toml  readme.md  requirements.txt
src/visual_recog/: __init__.py  config.py  main.py  service.py
src/visual_recog/clients/: __init__.py  base.py  gesture_client.py  object_client.py  passthrough_client.py
src/visual_recog/downstream/: __init__.py  http_mjpeg_sender.py  udp_sender.py  ws_sender.py
src/visual_recog/transports/: __init__.py  udp.py  webrtc.py
