[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-recog-service"
version = "0.1.0"
description = "Realtime visual recognition service with UDP/WebRTC ingress and pluggable clients."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "aiortc>=1.8.0",
  "aiohttp>=3.9.0",
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "onnxruntime>=1.16.0",
]

[project.scripts]
visual-recog = "visual_recog.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
